--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Paris</h2>
+                <h2>Belize</h2>
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Berlin</h2>
+                <h2>Barcelona</h2>
             </div>
+
+            <div class="destination" id="cairo">
+                <h2>Cairo</h2>
+            </div>
+
+            <div class="destination" id="dubai">
+                <h2>Dubai</h2>
+            </div>
+
+            <div class="destination" id="hongkong">
+                <h2>Hong-kong</h2>
+            </div>
+
+            <div class="destination" id="mountain">
+                <h2>Mountain view to visit udacity</h2>
+            </div>
+
         </div>
     </div>
 
